force-app/main/default/objects/Opportunity_Data_Temp__c/Opportunity_Data_Temp__c.object-meta.xml
<CustomObject>
    <label>Opportunity Data Temp</label>
    <nameField>
        <label>Opportunity Data Temp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Data Temp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>