force-app/main/default/objects/Opportunity_Data_Temp__c/fields/Adder__c.field-meta.xml
<CustomField>
    <fullName>Adder__c</fullName>
    <label>Adder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>