force-app/main/default/objects/Opportunity_Data_Temp__c/fields/Closer__c.field-meta.xml
<CustomField>
    <fullName>Closer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Data Temp</relationshipLabel>
    <relationshipName>Opportunity_Data_Temp</relationshipName>
    <type>Lookup</type>
</CustomField>