force-app/main/default/objects/Opportunity_Data_Temp__c/fields/Elec_Volume__c.field-meta.xml
<CustomField>
    <fullName>Elec_Volume__c</fullName>
    <label>Elec Volume</label>
    <length>18</length>
    <type>Text</type>
</CustomField>