force-app/main/default/objects/Opportunity_Data_Temp__c/fields/Gas_Volume__c.field-meta.xml
<CustomField>
    <fullName>Gas_Volume__c</fullName>
    <label>Gas Volume</label>
    <length>18</length>
    <type>Text</type>
</CustomField>