force-app/main/default/objects/Opportunity_Data_Temp__c/fields/Is_Opener_Closer_MisMatch__c.field-meta.xml
<CustomField>
    <fullName>Is_Opener_Closer_MisMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Opener Closer MisMatch</label>
    <type>Checkbox</type>
</CustomField>