force-app/main/default/objects/Opportunity_Data_Temp__c/fields/IsAgainProceed__c.field-meta.xml
<CustomField>
    <fullName>IsAgainProceed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAgainProceed</label>
    <type>Checkbox</type>
</CustomField>