force-app/main/default/objects/Opportunity_Data_Temp__c/fields/Opener__c.field-meta.xml
<CustomField>
    <fullName>Opener__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opener</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Data Temp (Opener)</relationshipLabel>
    <relationshipName>Opportunity_Data_Temp1</relationshipName>
    <type>Lookup</type>
</CustomField>