force-app/main/default/objects/Opportunity_Data_Temp__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Data Temp</relationshipLabel>
    <relationshipName>Opportunity_Data_Temp</relationshipName>
    <type>Lookup</type>
</CustomField>