force-app/main/default/objects/Opportunity_Data_Temp__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>